force-app/main/default/objects/Case/fields/Amount_of_payments__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_payments__c</fullName>
    <label>Amount of payments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>