force-app/main/default/objects/Case/fields/By_insurance__c.field-meta.xml
<CustomField>
    <fullName>By_insurance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>By insurance</label>
    <type>Checkbox</type>
</CustomField>