force-app/main/default/objects/Case/validationRules/Insurance_required_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_required_field</fullName>
    <active>true</active>
    <description>(Reference to Insurance) – required field when the checkbox “By insurance” is checked</description>
    <errorConditionFormula>AND(By_insurance__c == true ,  Insurance__c == &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Insurance__c</errorDisplayField>
    <errorMessage>Insurance – required field when the checkbox “By insurance” is checked</errorMessage>
</ValidationRule>